# tttc_practice

hw/: CMakeLists.txt
hw/TypesAnalyzer/: CMakeLists.txt  test.cpp  types_analyzer.cpp
